# jacobi

./: CMakeLists.txt  LICENSE  README.md  barrier.h  generate_matrix.py  jacobi.h  jacobi.hpp  jacobi_ff.h  jacobi_map.cpp  jacobi_map.h  jacobi_map.hpp  jacobi_par_for.h  jacobi_par_for.hpp  jacobi_thread.cpp  jacobi_thread.h  jacobi_thread.hpp  main.cpp  matrix1.txt  utils.h  utils.hpp
src/: Makefile  barrier.hpp  execute.sh  generate_matrix.py  jacobi.hpp  jacobi_fastflow.hpp  jacobi_map.cpp  jacobi_map.hpp  jacobi_omp.hpp  jacobi_par_for.hpp  jacobi_thread.cpp  jacobi_thread.hpp  main.cpp  parse_results.py  parse_results_no_omp.py  parser.py  utils.hpp
